--- a/css/styles.css
+++ b/css/styles.css
@@ -34,6 +34,14 @@ button {
 }
 
 
+
+/*header-container*/
+
+.header{
+  box-shadow: 0 4px 24px 0 rgba(105, 105, 105, 0.1);
+    background: #fefefe;
+}
+
 .header-container {
   display: flex;
   align-items: center;
@@ -65,7 +73,7 @@ button {
   color: #bbf330;
 }
 
-.header-button {
+.main-button {
   border-radius: 30px;
   min-width: 98px;
   height: 32px;
@@ -77,35 +85,115 @@ button {
   color: #2c2c2c;
 }
 
-.hero {
+.main-button:hover,
+.main-button:focus {
+  background: #ffe450;
+}
+
+
+
+/*start-container*/
+
+.start {
   padding-top: 14px;
   padding-bottom: 69px;
 }
 
-.hero-container {
+.start-container {
   display: flex;
   align-items: center;
 }
 
-.hero-button {
-  border-radius: 30px;
-  min-width: 98px;
-  height: 32px;
+.start-text-wrap {
+  min-width: 511px;
+  margin-right: 143px;
+
+}
+
+.start-title {
+  font-size: 48px;
+  line-height: 1.2;
+  margin-bottom: 28px;
+}
+
+.start-text{
+  padding-bottom: 40px;
+}
+
+
+
+/*about-us-container*/
+
+.about-us {
+  background: #ffe550;
+}
+
+.about-us-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.apple-img {
+  padding-bottom: 126px;
+  padding-top: 127px;
+}
+
+.title-about-us {
+  padding-bottom: 20px;
+  font-weight: 700;
+    font-size: 42px;
+    line-height: 1.2;
+    padding-top: 196px;
+}
+
+.text-about-us {
+  padding-bottom: 96px;
+  line-height: 1.5;
+  width: 500px;
+  font-size: 16px;
+}
+
+.our-advantages {
+  display: flex;
+  gap: 67px;
+}
+
+.our-advantage {
+  width: 253px;
+}
+
+.advantage-title {
+  padding-bottom: 16px;
+  font-weight: 700;
+    font-size: 18px;
+    line-height: 1.4;
+}
+
+.advantage-text {
+  padding-bottom: 32px;
+  line-height: 1.5;
+  max-width: 253px;
+  font-size: 14px;
+}
+
+.advantage-button {
+  border: 2px solid #7eb101;
+  background: #fff;
+}
+
+.advantage-button:hover,
+.advantage-button:focus {
   background: #bbf330;
   border: none;
-  font-weight: 500;
-  font-size: 13px;
-  line-height: 1.5;
-  color: #2c2c2c;
 }
 
-.hero-text-wrap{
-    min-width: 511px;
-    margin-right: 143px;
+.about-us-wrap{
+  padding-left: 90px;
 }
 
-.hero-title{
-    font-size: 48px;
-    line-height: 1.2;
-    margin-bottom: 28px;
+.title-wrap{
+  width: 527px;
 }
+
+
