--- a/css/styles.css
+++ b/css/styles.css
@@ -2,18 +2,21 @@ body {
   font-family: "Roboto", sans-serif;
   color: #2c2c2c;
 }
+
 ul,
 ol {
   margin: 0;
   padding: 0;
   list-style: none;
 }
+
 h1,
 h2,
 h3,
 p {
   margin: 0;
 }
+
 img {
   display: block;
 }
@@ -414,24 +417,24 @@ button {
 
 .footer-link {
   font-weight: 400;
-    font-size: 12px;
-    text-decoration: underline;
-    text-decoration-skip-ink: none;
-    color: #7eb101;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  font-size: 12px;
+  text-decoration: underline;
+  text-decoration-skip-ink: none;
+  color: #7eb101;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.right-wrap{
+.right-wrap {
   display: flex;
   justify-content: space-between;
   max-width: 1280px;
   padding: 0 16px;
-    padding-top: 80px;
-    padding-bottom: 100px;
-  }
+  padding-top: 80px;
+  padding-bottom: 100px;
+}
 
 
-.right-wrap-links{
+.right-wrap-links {
   display: flex;
   gap: 20px;
 }
@@ -440,15 +443,25 @@ button {
 
 /*------------modal-window------------*/
 
-.backdrop{
+.backdrop {
   width: 100%;
   height: 100%;
   position: fixed;
   top: 0;
   background-color: rgba(94, 99, 99, 0.7);
+
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
 }
 
-.modal{
+.is-open {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: all;
+}
+
+.modal {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -461,11 +474,11 @@ button {
   padding: 32px 32px 0px 32px;
 }
 
-.close-form-btn{
+.close-form-btn {
   border-radius: 100%;
   fill: #fff;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.06);
-  width: 40px; 
+  width: 40px;
   height: 40px;
   border: none;
   position: fixed;
@@ -481,28 +494,28 @@ button {
   background: #bbf330;
 }
 
-.cross-icon{
+.cross-icon {
   fill: #2c2c2c;
 }
 
-.form-title{
+.form-title {
   font-weight: 700;
-    font-size: 24px;
-    line-height: 1.2;
-    color: #2c2c2c;
-    text-align: center;
-    margin-bottom: 20px;
+  font-size: 24px;
+  line-height: 1.2;
+  color: #2c2c2c;
+  text-align: center;
+  margin-bottom: 20px;
 }
 
-.form-subtitle{
+.form-subtitle {
   font-weight: 500;
-    font-size: 16px;
-    line-height: 1.4;
-    margin-bottom: 2px;
+  font-size: 16px;
+  line-height: 1.4;
+  margin-bottom: 2px;
 
 }
 
-.form-input{
+.form-input {
   width: 100%;
   border: 1px solid rgba(18, 18, 18, 0.12);
   border-radius: 30px;
@@ -513,36 +526,35 @@ button {
   outline: transparent;
 }
 
-.form-input::placeholder{
+.form-input::placeholder {
   font-weight: 400;
-    font-size: 16px;
-    line-height: 1.25;
-    color: #c4c4c4;
+  font-size: 16px;
+  line-height: 1.25;
+  color: #c4c4c4;
 }
 
 .form-input:focus,
-.form-input:hover{
+.form-input:hover {
   border: 1px solid #7eb101;
 }
 
-.input-wrap{
+.input-wrap {
   margin-bottom: 24px;
 }
 
-.modal-form-btn{
+.modal-form-btn {
   border: 2px solid #7eb101;
-    border-radius: 30px;
-    padding: 10px 20px;
-    width: 106px;
-    height: 40px;
-    background: #fff;
-    text-align: center;
-    margin-top: 8px;
-  margin-left: 144px;  
+  border-radius: 30px;
+  padding: 10px 20px;
+  width: 106px;
+  height: 40px;
+  background: #fff;
+  text-align: center;
+  margin-top: 8px;
+  margin-left: 144px;
 }
 
 .modal-form-btn:focus,
-.modal-form-btn:hover{
+.modal-form-btn:hover {
   background: #bbf330;
 }
-
