--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@
 
 body {
     font-family: "Roboto", sans-serif;
-    color: #434455;
+    color: #2c2c2c;
     font-size: 16px;
     line-height: 1.5;
     background-color: #ffffff;
@@ -128,7 +128,77 @@ textarea {
     fill: #7eb101;
 }
 
+@media screen and (min-width: 768px) {
+    .burger-btn {
+        display: none;
+    }
 
+    .header-container {
+        align-items: center;
+    }
+
+    .nav {
+        display: flex;
+        margin-right: 32px;
+    }
+
+    .nav-list {
+        display: flex;
+        gap: 28px;
+    }
+
+    .current {
+        position: relative;
+        color: #bbf330;
+    }
+
+    .nav-link.current::after {
+        content: "";
+        position: absolute;
+        left: 0;
+        bottom: 28px;
+        display: block;
+        width: 100%;
+        height: 1px;
+        border-radius: 2px;
+        font-weight: 400;
+        background-color: #bbf330;
+    }
+
+    .nav-link {
+        padding: 28px 0;
+        display: block;
+        font-size: 14px;
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+
+    .nav-link:hover,
+    .nav-link:focus {
+        font-weight: 700;
+        text-decoration: underline;
+        color: #bbf330;
+    }
+
+    .main-button {
+        display: block;
+        border-radius: 30px;
+        min-width: 98px;
+        height: 32px;
+        background: #bbf330;
+        border: none;
+        font-weight: 500;
+        font-size: 13px;
+        line-height: 1.5;
+        color: #2c2c2c;
+
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+
+    .main-button:hover,
+    .main-button:focus {
+        background: #ffe450;
+    }
+}
 
 /*------------mobile-menu-header------------*/
 .mobile-menu {
@@ -211,4 +281,135 @@ textarea {
 .menu-nav-current {
     font-weight: 700;
     color: #2c2c2c;
+}
+
+
+
+/*------------start-container------------*/
+
+.start {
+    padding-top: 60px;
+    padding-bottom: 91px;
+}
+
+.start-title {
+    font-weight: 700;
+    font-size: 28px;
+    margin-bottom: 28px;
+}
+
+.start-text {
+    font-size: 14px;
+    line-height: 1.4;
+    margin-bottom: 32px;
+}
+
+.main-button-start {
+    display: block;
+    border-radius: 30px;
+    min-width: 98px;
+    height: 32px;
+    background: #bbf330;
+    border: none;
+    font-weight: 500;
+    font-size: 13px;
+    line-height: 1.5;
+    color: #2c2c2c;
+
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.main-button-start:hover,
+.main-button-start:focus {
+    background: #ffe450;
+}
+
+.start-salad {
+    display: none;
+}
+
+@media screen and (min-width: 768px) {
+    .start {
+        padding-top: 60px;
+        padding-bottom: 42px;
+    }
+
+    .start-container {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        gap: 32px;
+    }
+
+    .start-salad {
+        display: block;
+        margin: 0 auto;
+    }
+
+    .start-title {
+        width: 537px;
+        font-weight: 700;
+        font-size: 42px;
+        line-height: 1.2;
+        margin-bottom: 44px;
+    }
+
+    .start-text-wrap {
+        width: 300px;
+        margin-bottom: 40px;
+    }
+
+    .salad-border {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-top: 149px;
+        border-radius: 50%;
+        border: 14px solid #ffe550;
+        width: 292px;
+        height: 292px;
+
+        transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+
+    .salad-border:hover {
+        border: 14px solid #bbf330;
+    }
+}
+
+@media screen and (min-width: 1158px) {
+    .start {
+        padding-top: 14px;
+        padding-bottom: 69px;
+    }
+
+    .start-container {
+        justify-content: start;
+        gap: 143px;
+    }
+
+    .start-text-wrap {
+        min-width: 511px;
+    }
+
+    .start-title {
+        font-size: 48px;
+        line-height: 1.2;
+        margin-bottom: 28px;
+    }
+
+    .start-text {
+        padding-bottom: 40px;
+    }
+
+    .salad-border {
+        border: 26px solid #ffe550;
+        width: 528px;
+        height: 528px;
+        margin-top: 0;
+    }
+
+    .salad-border:hover {
+        border: 26px solid #bbf330;
+    }
 }
