--- a/css/styles.css
+++ b/css/styles.css
@@ -77,7 +77,7 @@ textarea {
 
 @media screen and (min-width: 1158px) {
     .container {
-        max-width: 1158px;
+        max-width: 1280px;
         padding: 0 16px;
     }
 }
@@ -180,7 +180,9 @@ textarea {
     }
 
     .main-button {
-        display: block;
+        display: flex;
+        align-items: center;
+        justify-content: center;
         border-radius: 30px;
         min-width: 98px;
         height: 32px;
@@ -305,7 +307,9 @@ textarea {
 }
 
 .main-button-start {
-    display: block;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     border-radius: 30px;
     min-width: 98px;
     height: 32px;
@@ -462,6 +466,9 @@ textarea {
     margin-top: 4px;
     font-weight: 500;
     font-size: 13px;
+    line-height: 1.5;
+    color: #2c2c2c;
+    padding: 0;
 
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -469,7 +476,7 @@ textarea {
 .advantage-button:hover,
 .advantage-button:focus {
     background: #bbf330;
-    border: nonee;
+    border: none;
 }
 
 @media screen and (min-width: 768px) {
@@ -537,7 +544,7 @@ textarea {
     }
 
     .apple {
-        margin-top: -75px;
+        margin-top: -50px;
     }
 
     .our-advantages {
@@ -580,6 +587,7 @@ textarea {
 
 .dishes-container {
     padding-top: 132px;
+    padding-bottom: 120px;
 }
 
 .dishes-title {
@@ -660,7 +668,6 @@ textarea {
         gap: 32px;
         align-items: center;
         justify-content: center;
-        margin-bottom: 101px;
     }
 
     .img-border {
@@ -678,6 +685,11 @@ textarea {
 }
 
 @media screen and (min-width: 1158px) {
+    .dishes-container {
+        padding-top: 120px;
+        padding-bottom: 101px;
+    }
+
     .img-border {
         border: 16px solid #ffe550;
         width: 329px;
@@ -695,3 +707,217 @@ textarea {
 
 
 /*-----------rewiews-container------------*/
+
+.reviews-container {
+    padding-bottom: 17px;
+}
+
+.reviews-title {
+    padding-bottom: 20px;
+    font-weight: 700;
+    font-size: 28px;
+}
+
+.reviews-text {
+    font-size: 14px;
+    padding-bottom: 40px;
+}
+
+.review-wrap {
+    margin-bottom: 25px;
+}
+
+.stars-wrap {
+    display: flex;
+    gap: 4px;
+    margin-bottom: 28px;
+}
+
+.star-icon {
+    fill: #ffe550;
+}
+
+.review-text {
+    font-weight: 700;
+    margin-bottom: 40px;
+}
+
+.person-wrap {
+    display: flex;
+    gap: 16px;
+    align-items: center;
+}
+
+.reviewers-text::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: -16px;
+    width: 1px;
+    height: 52px;
+    background-color: #7eb101;
+}
+
+.person {
+    position: relative;
+}
+
+.reviewers-name {
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.5;
+    margin-bottom: 2px;
+}
+
+.reviewers-text {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.5;
+}
+
+@media screen and (min-width: 768px) {
+    .reviews-title {
+        font-size: 42px;
+    }
+
+    .reviews-text {
+        font-size: 16px;
+        padding-bottom: 32px;
+    }
+
+    .review-wrap-container {
+        display: flex;
+        gap: 32px;
+    }
+
+    .review-text {
+        font-size: 18px;
+        margin-bottom: 40px;
+    }
+}
+
+@media screen and (min-width: 1158px) {
+    .reviews {
+        padding-top: 140px;
+        background: #ffe550;
+        min-height: 620px;
+    }
+
+    .review-wrap-container {
+        gap: 139px;
+    }
+
+    .review-wrap {
+        background-color: white;
+        width: 501px;
+        border-radius: 0 25px 25px 25px;
+        padding-top: 14px;
+        padding-bottom: 14px;
+        padding-right: 14px;
+        padding-left: 14px;
+    }
+}
+
+
+
+/*------------order-container------------*/
+
+.order-img {
+    margin-bottom: 17px;
+}
+
+.order-title {
+    margin-bottom: 20px;
+    font-weight: 700;
+    font-size: 28px;
+    line-height: 1.2;
+}
+
+.order-text {
+    margin-bottom: 40px;
+    font-size: 14px;
+}
+
+.order-input {
+    border: 0.85px solid #ffe550;
+    border-radius: 30px;
+    padding: 10px;
+    width: 279px;
+    height: 42px;
+    background-color: transparent;
+    margin-bottom: 20px;
+}
+
+.order-input::placeholder {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.5;
+    color: #505050;
+    padding-right: 11px;
+    padding-bottom: 12px;
+}
+
+.order-input:hover,
+.order-input:focus {
+    border: 0.85px solid #7eb101;
+    outline: none;
+}
+
+.order-button {
+    display: block;
+    margin-left: 177px;
+    margin-bottom: 60px;
+    text-align: center;
+    font-weight: 500;
+    font-size: 13px;
+    line-height: 1.5;
+    border-radius: 30px;
+    padding: 10px 20px;
+    width: 103px;
+    height: 42px;
+    background: #bbf330;
+    border: none;
+
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.order-button:hover,
+.order-button:focus {
+    background: #ffe450;
+
+}
+
+@media screen and (min-width: 768px) {
+    .order-container {
+        padding-top: 58px;
+        padding-bottom: 100px;
+    }
+
+    .order-title {
+        font-size: 42px;
+    }
+
+    .order-img {
+        float: right;
+    }
+
+    .order-text {
+        margin-bottom: 24px;
+        font-size: 16px;
+        width: 520px;
+    }
+
+    .order-input-wrap {
+        display: flex;
+        gap: 22px;
+    }
+
+    .order-input {
+        width: 395px;
+        height: 42px;
+    }
+
+    .order-button {
+        margin: 0;
+    }
+}
