--- a/css/styles.css
+++ b/css/styles.css
@@ -889,6 +889,7 @@ textarea {
     height: 42px;
     background: #bbf330;
     border: none;
+    color: #2c2c2c;
 
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -1041,6 +1042,7 @@ textarea {
     font-size: 13px;
     line-height: 1.5;
     margin-bottom: 24px;
+    color: #2c2c2c;
 
     transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
