--- a/css/styles.css
+++ b/css/styles.css
@@ -134,6 +134,10 @@ textarea {
         display: none;
     }
 
+    .mobile-menu {
+        display: none;
+    }
+
     .header-container {
         align-items: center;
     }
