--- a/css/styles.css
+++ b/css/styles.css
@@ -1281,7 +1281,7 @@ textarea {
     padding: 10px 20px;
     width: 106px;
     height: 40px;
-    background: #fff;
+    background-color: #fff;
     text-align: center;
     margin: 32px auto 0 auto;
     align-self: center;
