--- a/css/styles.css
+++ b/css/styles.css
@@ -39,6 +39,7 @@ ol {
 
 button {
     font-family: inherit;
+    color: inherit;
     cursor: pointer;
     border: none;
     display: block;
@@ -192,7 +193,7 @@ textarea {
         font-weight: 500;
         font-size: 13px;
         line-height: 1.5;
-        color: #2c2c2c;
+
 
         transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
@@ -1209,7 +1210,7 @@ textarea {
 
 .close-form-btn {
     border-radius: 100%;
-    fill: #fff;
+    background-color: #fff;
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.06);
     width: 40px;
     height: 40px;
@@ -1220,6 +1221,7 @@ textarea {
     display: flex;
     align-items: center;
     justify-content: center;
+
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -1285,6 +1287,7 @@ textarea {
     text-align: center;
     margin: 32px auto 0 auto;
     align-self: center;
+    color: #2c2c2c;
 
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
